fixes alignment of widely used component

--- a/src/app/management/data-actions/management-data-actions.component.css
+++ b/src/app/management/data-actions/management-data-actions.component.css
@@ -1,6 +1,11 @@
 .data-actions {
-  width: 100%;
   display: grid;
-  grid-template-rows: 1fr;
-  padding: 0 0.5rem;
+  justify-content: center;
+  padding: 0.5rem 0;
+}
+@media(min-width: 800px) {
+  .data-actions {
+    justify-content: flex-end;
+    padding: 0.5rem;
+  }
 }
